gccida/g3/etoe64
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/etoe64/src/real.c:4136:29: error: use of undeclared identifier 'XFlittlenan'
*( _QWORD *)e = *( _QWORD *)XFlittlenan; 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/etoe64/src/real.c:4137:8: error: use of undeclared identifier 'XFlittlenan'
e[4] = XFlittlenan[4]; 
       ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/etoe64/src/obj/real.o] Error 1
